--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sega_emulator
 description: Sega Master System Emulator in Flutter
 
-publish_to: 'Rafael Carneiro'
+publish_to: 'none'
 version: 1.0.0
 
 environment:
